fix: change color of link to make them more accesible (error contrast)

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -36,6 +36,9 @@ hr.about-sep{
   padding-bottom: 0em;
 }
 
+a{
+  color: #1871DC;
+}
 
 /*
 #quarto-content{
